# cloud-db-inventory

./: .env.example  .gitignore  CONTRIBUTING.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_SUMMARY.md  DOCKER_DOCS_INDEX.md  GIT_SETUP.md  LICENSE  README.md  azure-kql-query.txt  debug_azure.py  deploy.ps1  deploy.sh  docker-compose.deploy.yml  docker-compose.yml  export-images.sh  import_vms.sh  pyproject.toml
backend/: Dockerfile  migrate_owner_to_subscription.sql  requirements.txt
backend/app/: __init__.py  aws_account_models.py  aws_account_parser.py  aws_account_store.py  csv_parser.py  database.py  main.py  models.py  schemas.py  seed_data.py  store.py  tenant_mapping.py  vm_csv_parser.py  vm_models.py  vm_store.py
backend/tests/: test_api.py
backend/tests/data/: AWS_Account_Inventory.csv  CorpTenantVMInventory.csv  aws_ec2.csv  ec2_inventory_all_accounts.csv  sample_aws.csv  sample_azure.csv  test_arc_filter.csv
docker-initdb/: 01-init.sql
docs/: DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md  DEPLOY_FROM_DOCKER_HUB.md  DOCKER_DEPLOYMENT.md  DOCKER_DOCS_INDEX.md  DOCKER_IMAGES.md  DOCKER_README.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.js  App.tsx  main.js  main.tsx  styles.css  theme.js  theme.ts  types.ts
frontend/src/api/: client.js  client.ts
frontend/src/components/: AWSAccountCsvUploadDialog.js  AWSAccountCsvUploadDialog.tsx  AddDatabaseDrawer.js  AddDatabaseDrawer.tsx  AzureVMCsvUploadDialog.js  AzureVMCsvUploadDialog.tsx  AzureVMFiltersBar.js  AzureVMsTable.js  (+18 more)
(+14 files in other folders)
